Create async methods for FourSquare
Implement own solution for fetching FourSquare

--- a/BeerOverflowWindowsApp/App.config
+++ b/BeerOverflowWindowsApp/App.config
@@ -4,6 +4,7 @@
     <add key ="GoogleAPIKey" value ="AIzaSyBqe4VYJPO86ui1aOtmpxapqwI3ET0ZaMY"/>
     <add key ="GoogleAPILink" value ="https://maps.googleapis.com/maps/api/place/nearbysearch/json?location={0},{1}&amp;radius={2}&amp;type={3}&amp;key={4}"/>
     <add key ="GoogleAPICategories" value ="bar,night_club"/>
+    <add key ="FourSquareAPILink" value = "https://api.foursquare.com/v2/venues/search?client_id={0}&amp;client_secret={1}&amp;ll={2},{3}&amp;categoryId={4}&amp;radius={5}&amp;intent=browse&amp;v=20170901&amp;m=foursquare"/>
     <add key ="FourSquareClientId" value ="XN5J1TJ5RREJR1RVFBT2NLEN5HJXQU1VZYL2MC21MJSTCNRC"/>
     <add key ="FourSquareClientSecret" value ="YWHT33SLUDBU4LD4YDHHE3SKNUFCGOIIZPXRYLTE1QLREF3M"/>
     <add key ="FourSquareCategoryIDs" value ="4bf58dd8d48988d116941735,50327c8591d4c4b30a586d5d"/>
