--- a/BeerOverflowWindowsApp/BeerOverflowWindowsApp.csproj
+++ b/BeerOverflowWindowsApp/BeerOverflowWindowsApp.csproj
@@ -95,6 +95,7 @@
     <Compile Include="BarRating.cs" />
     <Compile Include="DataModels\RatingModel.cs" />
     <Compile Include="DataModels\FourSquareDataModel.cs" />
+    <Compile Include="Utilities\FetcherAndDeserializer.cs" />
     <Compile Include="Utilities\IHttpFetcher.cs" />
     <Compile Include="Utilities\JsonFetcher.cs" />
     <Compile Include="Utilities\RegexTools.cs" />
